--- a/script/install
+++ b/script/install
@@ -6,15 +6,13 @@
 
 # link vscode settings
 # mackup
-${ZSH}/bin/link-file "${HOME}/.vscode.conf" "${HOME}/Library/Application Support/Code/User"
+${ZSH}/bin/link-file "${ZSH}/vscode.conf.symlink" "${HOME}/Library/Application Support/Code/User"
 
 # link ssh
 mkdir -p "${HOME}/.ssh"
 ln -fs "${ZSH}/ssh/me" "${HOME}/.ssh/me"
 # mackup
 ln -fs "${ZSH}/karabiner/karabiner.edn" "${HOME}/.config/karabiner.edn"
-
-${ZSH}/bin/link-file "${ZSH}/vscode.conf" "${HOME}/Library/Application Support/Code/User"
 
 # set git hooks
 git config core.hooksPath git/hooks/
